--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <!-- Main Body -->
   <main 
     class="flex-grow flex items-center justify-center bg-cover bg-center bg-no-repeat bg-overlay"
-    style="background-image: url('/images/default/sunset.webp');"
+    style="background-image: url('./images/default/sunset.webp');"
   >
     <div class="container mx-auto flex flex-col items-end gap-3 justify-end space-x-6 p-8">
       <!-- Welcome Section -->
