--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
       <h2 class="text-2xl text-center font-bold mb-4">Profile</h2>
       <div class="text-center mb-4">
         <!-- Profile Picture -->
-        <img id="profile-pic" src="/images/default/default-profile.jpg" alt="User Profile Picture" class="w-32 h-32 rounded-full mx-auto shadow-md">
+        <img id="profile-pic" src="./images/default/default-profile.jpg" alt="User Profile Picture" class="w-32 h-32 rounded-full mx-auto shadow-md">
         <!-- <img id="profile-pic" src="/uploads/profile_pics/profile_6775598f6c9019.06469643.jpg" alt="User Profile Picture" class="w-32 h-32 rounded-full mx-auto shadow-md"> -->
 
         <!-- Upload Profile Picture -->
